# qbm-quant-finance

./: .coveragerc  .gitignore  .gitlab-ci.yml  README  README.md  conda-create-env.sh  environment.yml  requirements.txt  setup.cfg
docs/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  qbm.html  qbm.metrics.html  qbm.models.html  qbm.plotting.html  qbm.sampling.html  qbm.utils.html  readme_link.html  search.html  searchindex.js
docs/html/_sources/: qbm.metrics.rst.txt  qbm.rst.txt
docs/source/: conf.py  qbm.plotting.rst  qbm.sampling.rst  qbm.utils.rst
latex/: newcommands.tex  references.bib
latex/images/: gibbs_sampling_diagram.dio  rbm_diagram.dio
latex/report/: main.tex
notebooks/: clear_notebook_images.py  correlation_coefficient_plots.ipynb  data_analysis.ipynb  dwave_sample_test.ipynb  qbm_7x3_s_sweep.ipynb  qbm_8x4_anneal_schedule_comparison.ipynb  qbm_8x4_embedding_comparison.ipynb  qbm_8x4_mini_batch_size_comparison.ipynb  qbm_8x4_training_results.ipynb  qbm_exact.ipynb  qbm_exact_analysis.ipynb  qbm_log_returns.ipynb
scripts/qbm/: analyze_embedding_samples.py  compute_exact_qbm.py  generate_anneal_schedule_samples.py  generate_anneal_schedule_samples_ising.py  generate_anneal_schedule_samples_reverse.py  generate_annealing_schedule_samples.py  generate_embedding_samples.py
scripts/rbm/: README.md  analyze_all.py  analyze_autocorrelation.py  analyze_ensemble.py  config.json  generate_autocorrelation_samples.py  generate_ensemble.py  list_artifacts.py  models.json  prepare_results.py  train_model.py
(+66 files in other folders)
