[metadata]
name = qbm
version = attr: src.VERSION
description = Package for analyzing quantum Boltzmann machines
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
  black
  flake8
  ipython
  ipykernel
  jupyterlab
  jupyterlab_code_formatter
  jupyterlab_vim
  m2r2
  pytest
  pytest-cov
  python-language-server[all]
  Sphinx
  sphinx_rtd_theme

[flake8]
max-line-length = 88
extend-ignore = E203
ignore = E501, W503
